// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Todo renders correctly when complete 1`] = `
<div
  className="todo"
>
  <h2
    className="todo-title"
  >
    <FaRegCheckSquare
      onClick={[Function]}
    />
     
    <span
      className="todo-title-completed"
    >
      Build a racecar 🏎
    </span>
  </h2>
  <p
    className="todo-assignee"
  >
    <em>
      Assigned to:
    </em>
     
    Joe User
  </p>
</div>
`;

exports[`Todo renders correctly when incomplete 1`] = `
<div
  className="todo"
>
  <h2
    className="todo-title"
  >
    <FaRegSquare
      onClick={[Function]}
    />
     
    <span
      className=""
    >
      Build a racecar 🏎
    </span>
  </h2>
  <p
    className="todo-assignee"
  >
    <em>
      Assigned to:
    </em>
     
    Joe User
  </p>
</div>
`;
